right side nav collapsing issue fixed

--- a/src/app/utilities/right-accordian/right-accordian.component.scss
+++ b/src/app/utilities/right-accordian/right-accordian.component.scss
@@ -40,3 +40,7 @@
     border-top: 1px solid #614767;
     border-bottom: 1px solid #614767;
 }
+
+.changeColor{
+    background-color: #ffffff;
+}
